k8s/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: oms-v6-namespace
  labels:
    name: oms-v6
